Added basic endpoints to register users and delivery, modified db schema

--- a/FoodDeliveryAppBackend/build.gradle
+++ b/FoodDeliveryAppBackend/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.github.ksoichiro.console.reporter'
 
-group = 'com.FoodDeliveryAppBackend'
+group = 'org.FoodDeliveryAppBackend'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 repositories {
